refactor: most have been modified and security improved