@@ -3,54 +3,72 @@ package com.isis.moniTrack.service;
 import io.jsonwebtoken.*;
 import io.jsonwebtoken.security.Keys;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.stereotype.Service;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.userdetails.User;
-import java.util.Collections;
-
+import org.springframework.stereotype.Service;
 
 import java.security.Key;
+import java.nio.charset.StandardCharsets;
+import java.util.Collections;
 import java.util.Date;
+import java.util.List;
 
 @Service
 public class JwtService {
-    private final Key secretKey = Keys.secretKeyFor(SignatureAlgorithm.HS256);
-    private final long EXPIRATION_TIME = 1000 * 60 * 60; // 1 hora
+
+    private final Key secretKey;
+    private final long expirationTime;
+
+    public JwtService(
+            @Value("${jwt.secret}") String jwtSecret,
+            @Value("${jwt.expiration-ms:3600000}") long expirationTime) {
+        if (jwtSecret == null) {
+            throw new IllegalStateException("jwt.secret no está configurado");
+        }
+
+        byte[] keyBytes = jwtSecret.getBytes(StandardCharsets.UTF_8);
+        if (keyBytes.length < 32) {
+            throw new IllegalStateException("jwt.secret debe tener al menos 32 caracteres");
+        }
+
+        this.secretKey = Keys.hmacShaKeyFor(keyBytes);
+        this.expirationTime = expirationTime;
+    }
 
     public String generateToken(String username, String role) {
         return Jwts.builder()
                 .setSubject(username)
-                .claim("role", role)
+                .claim("role", role.toUpperCase())
                 .setIssuedAt(new Date())
-                .setExpiration(new Date(System.currentTimeMillis() + EXPIRATION_TIME))
+                .setExpiration(new Date(System.currentTimeMillis() + expirationTime))
                 .signWith(secretKey)
                 .compact();
     }
 
-    public String extractUsername(String token) {
+    private Claims extractAllClaims(String token) {
         return Jwts.parserBuilder()
                 .setSigningKey(secretKey)
                 .build()
                 .parseClaimsJws(token)
-                .getBody()
-                .getSubject();
+                .getBody();
+    }
+
+    public String extractUsername(String token) {
+        return extractAllClaims(token).getSubject();
     }
 
     public String extractRole(String token) {
-        return Jwts.parserBuilder()
-                .setSigningKey(secretKey)
-                .build()
-                .parseClaimsJws(token)
-                .getBody()
-                .get("role", String.class);
+        return extractAllClaims(token).get("role", String.class);
     }
 
     public boolean validateToken(String token) {
         try {
-            extractUsername(token);
+            extractAllClaims(token);
             return true;
-        } catch (JwtException e) {
+        } catch (JwtException | IllegalArgumentException e) {
             return false;
         }
     }
@@ -58,8 +76,12 @@ public class JwtService {
     public Authentication getAuthentication(String token) {
         String username = extractUsername(token);
 
-        // puedes agregar roles si lo deseas, por ahora vacío
-        User principal = new User(username, "", Collections.emptyList());
+        String role = extractRole(token);
+        List<SimpleGrantedAuthority> authorities = role == null || role.isBlank()
+                ? Collections.emptyList()
+                : List.of(new SimpleGrantedAuthority("ROLE_" + role.toUpperCase()));
+
+        User principal = new User(username, "", authorities);
 
         return new UsernamePasswordAuthenticationToken(principal, token, principal.getAuthorities());
     }
